--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <header>
       <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="site.html"> Мои сайты</a>
     </header>
     <main>
       <h1>Рябков Захар</h1>
